Fixing bug in getParallelEnableTransitions related to edge case of empty sets, by fixing underlying bug in the truth table construction. This was done by introducing Tautology expressions as an alternative to atomic predicates, where empty truth tables still have the true tautology row. Also added tautology (true and false) to expression parsing, and transitions that don’t have a guard now return the true tautology rather than null.